# gl-template

./: CMakeLists.txt
glad/: CMakeLists.txt  glad.c
glad/include/glad/: glad.h
include/: Camera.h  Mesh.h  Model.h
src/cpp/: Camera.cpp  Mesh.cpp  Model.cpp  main.cpp
src/glsl/: model_shader.frag  model_shader.vert
